<?xml version="1.0"?>
<package>
  <name>cv_camera</name>
  <version>0.1.0</version>
  <description>cv_camera uses OpenCV capture object to capture camera image.
  This supports camera_image and nodelet.
  </description>
  <maintainer email="t.ogura@gmail.com">Takashi Ogura</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/cv_camera</url>
  <author email="t.ogura@gmail.com">Takashi Ogura</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>roslint</build_depend>

  <run_depend>libopencv-dev</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>camera_info_manager</run_depend>

  <export>
    <nodelet plugin="${prefix}/cv_camera_nodelets.xml"/>
  </export>

</package>
