<?xml version="1.0"?>
<package>
  <name>ros_industrial_learn</name>
  <version>0.0.0</version>
  <description>The ros_industrial_learn package</description>

  <maintainer email="1631684@tongji.edu.cn">ewenwan</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
